--- a/deployit-udm-plugins/middleware-plugins/apache-modjk-plugin/pom.xml
+++ b/deployit-udm-plugins/middleware-plugins/apache-modjk-plugin/pom.xml
@@ -1,78 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.xebialabs.deployit</groupId>
-    <artifactId>middleware-plugins</artifactId>
-    <version>3.8.0</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <artifactId>apache-modjk-plugin</artifactId>
-  <version>${deployit.api.version}-1-SNAPSHOT</version>
-  <properties>
-    <maven.test.skip>true</maven.test.skip>
-  </properties>
-  <scm>
-    <connection>scm:git:git://github.com/xebialabs/community-plugins.git</connection>
-    <url>scm:git:git://github.com/xebialabs/community-plugins.git</url>
-  </scm>
-  <dependencies>
-    <dependency>
-      <groupId>com.xebialabs.deployit.plugins</groupId>
-      <artifactId>webserver-plugin</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.xebialabs.deployit.plugins</groupId>
-      <artifactId>remoting-plugin</artifactId>
-    </dependency>
-  </dependencies>
-  
-  <profiles>
-    <profile>
-      <id>test-with-jbossas-plugin</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-        <file>
-          <exists>${deployit.server.home}/plugins/jbossas-plugin-${deployit.api.version}.jar</exists>
-        </file>
-      </activation>
-      <properties>
-        <maven.test.skip>false</maven.test.skip>
-      </properties>
-      <dependencies>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.xebialabs.deployit</groupId>
+        <artifactId>middleware-plugins</artifactId>
+        <version>3.8.0</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    <artifactId>apache-modjk-plugin</artifactId>
+    <version>${deployit.api.version}-1-SNAPSHOT</version>
+    <properties>
+        <maven.test.skip>true</maven.test.skip>
+    </properties>
+    <scm>
+        <connection>scm:git:git://github.com/xebialabs/community-plugins.git</connection>
+        <url>scm:git:git://github.com/xebialabs/community-plugins.git</url>
+    </scm>
+    <dependencies>
         <dependency>
-          <groupId>com.xebialabs.deployit.plugins</groupId>
-          <artifactId>jbossas-plugin</artifactId>
+            <groupId>com.xebialabs.deployit.plugins</groupId>
+            <artifactId>webserver-plugin</artifactId>
         </dependency>
         <dependency>
-          <groupId>com.xebialabs.deployit.plugins</groupId>
-          <artifactId>generic-plugin</artifactId>
+            <groupId>com.xebialabs.deployit.plugins</groupId>
+            <artifactId>remoting-plugin</artifactId>
         </dependency>
         <dependency>
-          <groupId>com.xebialabs.deployit</groupId>
-          <artifactId>udm-test-support</artifactId>
-          <version>${deployit.api.version}</version>
-          <scope>test</scope>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
-        <dependency>
-          <groupId>com.xebialabs.overthere</groupId>
-          <artifactId>overthere</artifactId>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>ch.qos.logback</groupId>
-          <artifactId>logback-classic</artifactId>
-          <version>0.9.24</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.jmock</groupId>
-          <artifactId>jmock-junit4</artifactId>
-          <version>2.5.1</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
+
+    </dependencies>
+
+    <profiles>
+        <profile>
+            <id>test-with-jbossas-plugin</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <file>
+                    <exists>${deployit.server.home}/plugins/jbossas-plugin-${deployit.api.version}.jar</exists>
+                </file>
+            </activation>
+            <properties>
+                <maven.test.skip>false</maven.test.skip>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>com.xebialabs.deployit.plugins</groupId>
+                    <artifactId>jbossas-plugin</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>com.xebialabs.deployit.plugins</groupId>
+                    <artifactId>generic-plugin</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>com.xebialabs.deployit</groupId>
+                    <artifactId>udm-test-support</artifactId>
+                    <version>${deployit.api.version}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>com.xebialabs.overthere</groupId>
+                    <artifactId>overthere</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                    <version>0.9.24</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jmock</groupId>
+                    <artifactId>jmock-junit4</artifactId>
+                    <version>2.5.1</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 </project>
