--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.xebialabs.deployit</groupId>
-    <artifactId>community-plugins-project</artifactId>
-    <version>3.9</version>
-    <relativePath>project/pom.xml</relativePath>
-  </parent>
-  <artifactId>community-plugins</artifactId>
-  <packaging>pom</packaging>
-  <scm>
-    <connection>scm:git:git://github.com/xebialabs/community-plugins.git</connection>
-    <url>scm:git:git://github.com/xebialabs/community-plugins.git</url>
-  </scm>
-  <modules>
-    <module>deployit-cli-plugins</module>
-    <module>deployit-server-plugins</module>
-    <module>deployit-udm-plugins</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.xebialabs.deployit</groupId>
+        <artifactId>community-plugins-project</artifactId>
+        <version>3.9</version>
+        <relativePath>project/pom.xml</relativePath>
+    </parent>
+    <artifactId>community-plugins</artifactId>
+    <packaging>pom</packaging>
+    <scm>
+        <connection>scm:git:git://github.com/xebialabs/community-plugins.git</connection>
+        <url>scm:git:git://github.com/xebialabs/community-plugins.git</url>
+    </scm>
+    <modules>
+        <module>deployit-cli-plugins</module>
+        <module>deployit-server-plugins</module>
+        <module>deployit-udm-plugins</module>
+    </modules>
 </project>
