jbossdm-standalone-restarter plugin

--- a/deployit-udm-plugins/middleware-plugins/pom.xml
+++ b/deployit-udm-plugins/middleware-plugins/pom.xml
@@ -22,5 +22,6 @@
         <module>liferay-plugin</module>
         <module>stored-procedures-plugin</module>
         <module>iseries-plugin</module>
+        <module>jbossdm-standalone-restarter</module>
     </modules>
 </project>
